# par-linter

./: .dockerignore  .gitignore  Dockerfile  Makefile  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yaml  pages.yaml
docs/: _config.yml  checks.md  configuration.md  index.md
docs/checks/: absent-selector.md  broad-selector.md  counter-threshold.md  duplicate-alert.md  for-duration.md  invalid-owner.md  no-comparison.md  non-base-unit.md  rate-window.md  recording-ref.md  required-annotations.md  required-labels.md
examples/: bad_rules.yaml
par/: __init__.py  cli.py  config.py  models.py  parser.py  reporter.py
par/checks/: base.py  metadata.py  naming.py  selectors.py  stability.py  structure.py
tests/: conftest.py  test_cli.py  test_config.py  test_metadata.py  test_naming.py  test_parser.py  test_reporter.py  test_selectors.py  test_stability.py  test_structure.py
